# satellite-sr-with-diffusion

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: config.yaml
configs/data/: custom.yaml  sen2venus_2x.yaml  sen2venus_3x.yaml  sen2venus_4x.yaml  worldstrat.yaml
configs/model/: sr3.yaml  wave.yaml
data/: match_lr_colors_to_hr.py  upsample_lr_images.py  worldstrat_config.json
satellite_sr_with_diffusion/: inference.py  main.py
satellite_sr_with_diffusion/analysis/: ag.py  glcm.py  lbp.py
satellite_sr_with_diffusion/config/sen2venus/sr3/: train_new_config_3x.json  train_new_config_4x.json  train_resume_config_4x.json  val_config_3x.json  val_config_4x.json
satellite_sr_with_diffusion/config/sen2venus/wave/: train_new_config_3x.json  train_resume_config_3x.json  train_resume_config_4x.json  val_config_4x.json
satellite_sr_with_diffusion/config/worldstrat/sr3/: train_new_config.json  train_resume_config.json  val_config.json
satellite_sr_with_diffusion/config/worldstrat/wave/: train_resume_config.json  val_config.json
satellite_sr_with_diffusion/core/: config.py  engine.py  eval_utils.py  logger.py  metrics.py
satellite_sr_with_diffusion/data/: __init__.py  image_pair_dataset.py  util.py
satellite_sr_with_diffusion/model/: __init__.py  base_model.py  model.py  networks.py
satellite_sr_with_diffusion/model/sr3_modules/: diffusion.py  unet.py
satellite_sr_with_diffusion/model/wave_modules/: diffusion.py  unet.py
satellite_sr_with_diffusion/notebooks/: s2v_2x_s_wave.ipynb  s2v_3x_subtract_images.ipynb
satellite_sr_with_wavelet_diffusion/: inference.py  lbp.py  requirements.txt
satellite_sr_with_wavelet_diffusion/analysis/: ag.py
satellite_sr_with_wavelet_diffusion/config/sen2venus/sr3/: train_resume_config_3x.json
satellite_sr_with_wavelet_diffusion/config/sen2venus/wave/: train_new_config_4x.json  val_config_3x.json
satellite_sr_with_wavelet_diffusion/config/worldstrat/wave/: train_new_config.json
satellite_sr_with_wavelet_diffusion/core/: metrics.py
satellite_sr_with_wavelet_diffusion/data/: __init__.py  util.py
satellite_sr_with_wavelet_diffusion/model/: model.py
satellite_sr_with_wavelet_diffusion/notebooks/: s2v_2x_s_wave_eval.ipynb  s2v_2x_wave.ipynb  s2v_2x_wave_eval.ipynb
scripts/: DATA.md  create_lr.py  match_lr_colors_to_hr.py  prepare_data.py  rename_images.py  resize_images.py  worldstrat_config.json  worldstrat_split.csv
